--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0 1rem;
 }
 
 code {
@@ -12,9 +13,9 @@ code {
     monospace;
 }
 
-.header {
+/* .header {
   grid-area: header;
-}
+} */
 
 .main {
   grid-area: main;
