--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -1,41 +1,27 @@
 .header{
-    border: 1px solid crimson;
+    border: 1px solid blue;
     position: fixed;
-    width: calc(100% - 2rem);
-    height: 80px;
+    width: calc(100%);
+    /* height: 80px; */
     background-color: var(--main-bg-color);
     grid-area: header;
     display: grid;
     grid-template: 
-    "iconMainMenu logo userMenu" 80px / 20% 60% 20%;    
+    "iconMainMenu logo iconUserMenu" 80px / 20% 60% 20%;
+    padding: 0 1rem;
 }
 
-.mainMenu_icon_container{
+.mainMenu_icon_container{ /*Menú hamburgusesa*/
     grid-area: iconMainMenu; 
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    /* border: 1px solid orange; */
 }
 
-.logo_container{
+.logo_container{ /*Nombre y logo*/
     grid-area: logo;
     display: flex;
     justify-content: center;
-    /* border: 1px solid blue; */
-}
-
-.userMenu_container{
-    grid-area: userMenu;    
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    /* border: 1px solid green; */
-}
-
-.mainMenu_container{
-    grid-area: mainMenu;
-    display: none;
 }
 
 .logo_principal{    
@@ -43,4 +29,199 @@
     height: 80px;
     object-fit: cover;
     cursor: pointer;
+}
+
+.userMenu_icon_container{ /*Icono usuario*/
+    grid-area: iconUserMenu;    
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.mainMenu_container, /*Opciones menú principal*/
+.userMenu_container { /*Opciones menú de usuario*/
+    grid-area: mainMenu;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 80px;
+    left: 100%;
+    transition: left 0.3s;
+    width: 100%; 
+    height: auto; 
+    overflow-y: auto; 
+    background-color: var(--main-bg-color);
+    color: var(--main-a-text-color);
+    z-index: 1;  
+    border: 1px solid var(--button-main-bg);
+}
+
+.userMenu_container {
+    grid-area: userMenu;
+}
+
+.menu_items {
+    line-height: 55px;
+    font-size: 1.1rem;
+    display: flex;    
+}
+
+.nav_link {
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    padding: .2rem 15px;
+}
+
+.nav_link:hover {
+    background-color: var(--button-main-bg);
+    color: var(--second-text-color);
+    font-weight: 700;
+    transition: 0.5s;
+}
+
+.nav_menu_visible{
+    left: 0;
+    transition: 0.5s;
+}
+
+/* Tabletas y Laptops*/
+@media screen and (min-width: 600px) {    
+
+    .header{
+        /* width: calc(100% - 5rem); */
+        padding: 0 3rem;
+    }
+    
+    .logo_principal{    
+        width: 67%;
+    }
+    
+    .menu_items {
+        line-height: 65px;
+        font-size: 1.7rem;
+        display: flex;    
+    }
+
+    .nav_link {
+        padding: 1.2rem 15px;
+    }
+
+}
+
+/* Laptops*/
+@media screen and (min-width: 1024px) {
+
+    .header{
+        /* position: fixed; */
+        /* width: calc(100% - 2rem); */
+        /* height: 110px; */
+        /* background-color: var(--main-bg-color); */
+        /* grid-area: header; */
+        /* display: grid; */
+        /* width: calc(100% - 10rem); */
+        grid-template: 
+        "logo mainMenu" 110px / 35% 1fr;
+        padding: 0 5rem;
+        /* border: 1px solid red; */
+        /* grid-template: 
+        "iconMainMenu logo iconUserMenu" 80px / 20% 60% 20%;    */
+    }
+    
+    .mainMenu_icon_container{ /*Menú hamburgusesa*/
+        /* grid-area: iconMainMenu; 
+        display: flex;
+        justify-content: flex-start;
+        align-items: center; */
+        display: none;
+    }
+    
+    .logo_container{ /*Nombre y logo*/
+        /* grid-area: logo;
+        display: flex;
+        justify-content: center; */
+    }
+    
+    .logo_principal{   
+        /* width: 90%;
+        height: 80px;
+        object-fit: cover;
+        cursor: pointer; */
+        height: 110px;
+        width: 75%;
+    }
+    
+    .userMenu_icon_container{ /*Icono usuario*/
+        /* grid-area: iconUserMenu;    
+        display: flex;
+        justify-content: flex-end;
+        align-items: center; */
+        display: none;
+    }
+    
+    .mainMenu_container { /*Opciones menú principal*/
+    /*.userMenu_container { Opciones menú de usuario*/
+        /* grid-area: mainMenu;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 80px;
+        left: 100%;
+        transition: left 0.3s;
+        width: 100%; 
+        height: auto; 
+        overflow-y: auto; 
+        background-color: var(--main-bg-color);
+        color: var(--main-a-text-color);
+        z-index: 1;  
+        border: 1px solid var(--button-main-bg); */
+        position: relative;
+        top: 0;
+        left: 0;
+        border: none;
+        overflow-y: hidden; 
+    }
+
+    .mainMenu_container > ul {
+        display: flex;
+    }
+    
+    .userMenu_container {
+        grid-area: userMenu;
+    }
+    
+    .menu_items {
+        /* line-height: 55px;
+        font-size: 1.1rem;
+        display: flex;     */
+        /* border: 1px solid red; */
+        line-height: 110px;
+        font-size: 1.3rem;
+        padding: 0 1rem;
+    }
+
+    .menu_items:not(:last-child) {
+        margin-right: 2.2rem;
+    }
+    
+    .nav_link {
+        /* width: 100%;
+        text-align: center;
+        cursor: pointer; */
+        padding: 0;
+        font-weight: 400;
+    }
+    
+    .nav_link:hover {
+        background-color: inherit;
+        color: var(--second-a-text-color);
+        font-weight: 400;
+        /* transition: 0.5s; */
+    }
+    
+    .nav_menu_visible{
+        /* left: 0;
+        transition: 0.5s; */
+    }
+
 }
