--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -1,14 +1,13 @@
-.header{
-    border: 1px solid blue;
+.header {
     position: fixed;
     width: calc(100%);
-    /* height: 80px; */
     background-color: var(--main-bg-color);
     grid-area: header;
     display: grid;
     grid-template: 
     "iconMainMenu logo iconUserMenu" 80px / 20% 60% 20%;
     padding: 0 1rem;
+    box-shadow: 0 2px 0 rgb(21 147 185 / 60%);
 }
 
 .mainMenu_icon_container{ /*Menú hamburgusesa*/
@@ -18,14 +17,14 @@
     align-items: center;
 }
 
-.logo_container{ /*Nombre y logo*/
+.logo_container { /*Nombre y logo*/
     grid-area: logo;
     display: flex;
     justify-content: center;
 }
 
-.logo_principal{    
-    width: 90%;
+.logo_principal {
+    width: 100%;
     height: 80px;
     object-fit: cover;
     cursor: pointer;
@@ -88,8 +87,7 @@
 /* Tabletas y Laptops*/
 @media screen and (min-width: 600px) {    
 
-    .header{
-        /* width: calc(100% - 5rem); */
+    .header {
         padding: 0 3rem;
     }
     
@@ -112,69 +110,27 @@
 /* Laptops*/
 @media screen and (min-width: 1024px) {
 
-    .header{
-        /* position: fixed; */
-        /* width: calc(100% - 2rem); */
-        /* height: 110px; */
-        /* background-color: var(--main-bg-color); */
-        /* grid-area: header; */
-        /* display: grid; */
-        /* width: calc(100% - 10rem); */
+    .header {
         grid-template: 
-        "logo mainMenu" 110px / 35% 1fr;
+        "logo mainMenu iconUserMenu" 110px / 35% 1fr 8%;
         padding: 0 5rem;
-        /* border: 1px solid red; */
-        /* grid-template: 
-        "iconMainMenu logo iconUserMenu" 80px / 20% 60% 20%;    */
     }
     
     .mainMenu_icon_container{ /*Menú hamburgusesa*/
-        /* grid-area: iconMainMenu; 
-        display: flex;
-        justify-content: flex-start;
-        align-items: center; */
         display: none;
     }
-    
-    .logo_container{ /*Nombre y logo*/
-        /* grid-area: logo;
-        display: flex;
-        justify-content: center; */
+
+    .logo_container { /*Nombre y logo*/
+        height: 110px;
+        justify-content: flex-start;
     }
     
-    .logo_principal{   
-        /* width: 90%;
-        height: 80px;
-        object-fit: cover;
-        cursor: pointer; */
+    .logo_principal {
         height: 110px;
         width: 75%;
     }
     
-    .userMenu_icon_container{ /*Icono usuario*/
-        /* grid-area: iconUserMenu;    
-        display: flex;
-        justify-content: flex-end;
-        align-items: center; */
-        display: none;
-    }
-    
     .mainMenu_container { /*Opciones menú principal*/
-    /*.userMenu_container { Opciones menú de usuario*/
-        /* grid-area: mainMenu;
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 80px;
-        left: 100%;
-        transition: left 0.3s;
-        width: 100%; 
-        height: auto; 
-        overflow-y: auto; 
-        background-color: var(--main-bg-color);
-        color: var(--main-a-text-color);
-        z-index: 1;  
-        border: 1px solid var(--button-main-bg); */
         position: relative;
         top: 0;
         left: 0;
@@ -187,14 +143,10 @@
     }
     
     .userMenu_container {
-        grid-area: userMenu;
+        display: none;
     }
     
     .menu_items {
-        /* line-height: 55px;
-        font-size: 1.1rem;
-        display: flex;     */
-        /* border: 1px solid red; */
         line-height: 110px;
         font-size: 1.3rem;
         padding: 0 1rem;
@@ -205,9 +157,6 @@
     }
     
     .nav_link {
-        /* width: 100%;
-        text-align: center;
-        cursor: pointer; */
         padding: 0;
         font-weight: 400;
     }
@@ -216,12 +165,6 @@
         background-color: inherit;
         color: var(--second-a-text-color);
         font-weight: 400;
-        /* transition: 0.5s; */
-    }
-    
-    .nav_menu_visible{
-        /* left: 0;
-        transition: 0.5s; */
     }
 
 }
