--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -1,6 +1,5 @@
 .footer {
-  /* border: 1px solid cornflowerblue; */
-  background-color: var(--main-a-text-color); /* second-bg-color */
+  background-color: var(--main-a-text-color);
   grid-area: footer;
   display: grid;
   grid-template: 
@@ -8,18 +7,14 @@
   "mapa" auto
   "redes" auto
   "direccion" auto
+  "ubicacion" auto
   "derechos" auto; 
   color: var(--second-text-color);
 }
 
 .containers {
-  /* border: 1px solid red; */
   margin: 1.2rem 1rem;
 }
-
-/* .containers:first-child {
-  margin-top: 1rem;
-} */
 
 /*Logo.JSX*/
 
@@ -41,7 +36,7 @@
   font-weight: 700;
 }
 
-.contenedorMapa {
+.containerMapa {
   grid-area: mapa;
   margin-top: .7rem;
   line-height: 30px;
@@ -64,38 +59,47 @@
 }
 
 .containerRedes > div > .title, .containerDireccion > div > .title {
-  /* border: 1px solid yellow; */
   margin-bottom: .8rem;
 }
 
 .icons_container {  
   display: flex;
-  /* justify-content: center; */
   gap: 1.2rem;
 }
 
 .figure {
-  /* border: 1px solid yellow; */
   width: 35px;
 }
 
 /*Direccion.JSX*/
-.direccionDatos_container {
+
+.containerDireccion {  
   grid-area: direccion;
+}
+
+.direccionDatos_container {
   display: flex;
 }
 
 .containerDireccion > .direccionDatos_container > .figure {
-  /* border: 1px solid yellow; */
   width: 10%;
   text-align: center;
 }
 
 .direccionDatos {
-  /* border: 1px solid green;  */
   width: 90%;
   line-height: 25px;
   padding-left: 1rem;
+}
+
+/*PuntoMapa.jsx*/
+.ubicacionContainer {
+  grid-area: ubicacion;
+}
+
+.mapsContainer {
+  width: 100%;
+  height: 100%;
 }
 
 /*Derechos.JSX*/
@@ -106,4 +110,178 @@
   padding: 1.4rem .2rem;
   background-color: var(--main-bg-color);
   color: var(--main-a-text-color);
+}
+
+/* Tablets y Laptops*/
+@media screen and (min-width: 600px) {
+  .footer {
+    grid-template: 
+    "logo mapa" auto
+    "redes mapa" auto
+    "direccion ubicacion" auto
+    "derechos derechos" auto / 1fr 1fr;
+  }
+  
+  /*Logo.JSX*/  
+  .logoContainer {    
+    height: auto;
+  }
+  
+  .logoImg {
+    height: 120px;
+  }
+  
+  /*MapaNavegacion.JSX & MapaMenu.jsx*/
+  .title {
+    font-size: 1.5rem;
+    text-align: left;
+    margin-bottom: 1rem;
+  }
+  
+  .containerMapa {
+    line-height: 40px;
+    padding-left: 5rem;
+  }
+
+  .contenedorMapa:nth-child(3) {
+    margin-top: .7rem;
+  }
+  
+  .subtitulo {
+    font-size: 1.3rem;
+    padding-left: .7rem;
+  }
+  
+  .opcionMenu {
+    font-size: 1.1rem;
+    padding-left: .7rem;
+  }
+  
+  /*RedesSociales.JSX*/
+  .containerRedes > div > .title, .containerDireccion > div > .title {
+    text-align: center;
+    margin-bottom: 1.3rem;
+  }
+  
+  .icons_container {
+    justify-content: center;
+    gap: 1rem;
+  }
+  
+  .figure {
+    width: 60px;
+  }
+  
+  /*Direccion.JSX*/
+  .containerDireccion > .direccionDatos_container > .figure {
+    width: 10%;
+  }
+  
+  .direccionDatos {
+    width: 90%;
+    line-height: 30px;
+    font-size: 1.1rem;
+    padding-left: 3rem;
+  }
+
+  /*PuntoMapa.jsx*/
+  .ubicacionContainer {
+    display: flex;
+    justify-content: center;
+  }
+
+  .mapsContainer {
+    width: 90%;
+    height: 80%;
+  }
+  
+  /*Derechos.JSX*/
+  .containerDerechos {
+    font-size: .9rem;
+    padding: 1.6rem .3rem;
+    text-align: center;
+  }
+}
+
+/* Tablets y Laptops*/
+@media screen and (min-width: 1024px) {
+  .footer {
+    padding-top: 5rem;
+    grid-template: 
+    "logo mapa direccion" auto
+    "redes mapa ubicacion" auto
+    "derechos derechos derechos" auto / .3fr .5fr .5fr;
+  }
+  
+  .containers {
+    margin: 0;
+  }
+  
+  /*Logo.JSX*/  
+  .logoContainer {
+    height: 140px;
+  }
+  
+  .logoImg {
+    height: 140px;
+  }
+  
+  /*MapaNavegacion.JSX & MapaMenu.jsx*/
+  .title {
+    font-size: 1.5rem;
+  }
+  
+  .containerMapa {
+    line-height: 40px;
+    padding-left: 6rem;
+  }
+
+  .contenedorMapa:nth-child(3) {
+    margin-top: 1rem;
+  }
+  
+  /*RedesSociales.JSX*/
+  .containerRedes > div > .title, .containerDireccion > div > .title {
+    margin-bottom: 1.2rem;
+    text-align: center;
+  }
+  
+  /*Direccion.JSX*/
+
+  .direccionDatos_container {
+    justify-content: center;
+  }
+  
+  .containerDireccion > .direccionDatos_container > .figure {
+    width: 10%;
+  }
+  
+  .direccionDatos {
+    width: auto;
+    line-height: 33px;
+    padding-left: 2rem;
+  }
+
+  /*PuntoMapa.jsx*/
+  .ubicacionContainer {
+    display: flex;
+    justify-content: center;
+  }
+
+  .mapsContainer {
+    margin-top: 1rem;
+    width: 380px;
+    height: auto;
+  }
+
+  .mapsContainer > iframe {
+    height: 200px;
+  }
+  
+  /*Derechos.JSX*/
+  .containerDerechos {
+    font-size: .9rem;
+    padding: 2rem .3rem;
+    margin-top: 5rem;
+  }
 }
