--- a/src/css/Aside.module.css
+++ b/src/css/Aside.module.css
@@ -44,7 +44,8 @@
         padding: .5rem 1rem 0 1rem;
     }
 
-    .nav_link:hover {
+    .nav_link:hover,
+    .nav_link_active  {
         background-color: inherit;
         color: var(--second-a-text-color);
         font-weight: 400;
