--- a/src/css/Aside.module.css
+++ b/src/css/Aside.module.css
@@ -9,6 +9,7 @@
         display: block;
         transition: 0.5s;
         box-shadow: 3px 0 rgb(21 147 185 / 25%);
+        padding-bottom: 1rem;
     }
 
     .aside_no_visible {
@@ -18,14 +19,14 @@
 
     .only_main {
         grid-template:
-          "header header" 110px
+          "header header" 90px
           "main main" 1fr
           "footer footer" auto / .1fr 1fr;
         transition: 0.5s;
     }
 
     .foldMenu_icon_container{ /*Icono Fold*/
-        height: 60px;
+        height: 50px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -39,8 +40,8 @@
 
     .menu_items {
         width: 100%;
-        line-height: 40px;
-        font-size: 1.3rem;
+        line-height: 30px;
+        font-size: 1rem;
         padding: .5rem 1rem 0 1rem;
     }
 
@@ -48,7 +49,7 @@
     .nav_link_active  {
         background-color: inherit;
         color: var(--second-a-text-color);
-        font-weight: 400;
         transition: 0.5s;
+        font-weight: 500;
     }
 }
