--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -11,7 +11,7 @@
     z-index: 9;
 }
 
-.mainMenu_icon_container{ /*Menú hamburgusesa*/
+.mainMenu_icon_container{ /*Menú hamburgusesa*/    
     grid-area: iconMainMenu; 
     display: flex;
     justify-content: flex-start;
@@ -31,7 +31,7 @@
     cursor: pointer;
 }
 
-.userMenu_icon_container{ /*Icono usuario*/
+.userMenu_icon_container{ /*Icono usuario*/    
     grid-area: iconUserMenu;    
     display: flex;
     justify-content: flex-end;
@@ -114,7 +114,7 @@
 
     .header {
         grid-template: 
-        "logo mainMenu iconUserMenu" 110px / 35% 1fr 8%;
+        "logo mainMenu iconUserMenu" 90px / 35% 1fr 8%;
         padding: 0 5rem;
     }
     
@@ -122,14 +122,14 @@
         display: none;
     }
 
-    .logo_container { /*Nombre y logo*/
-        height: 110px;
-        justify-content: flex-start;
+    .logo_container { /*Nombre y logo*/        
+        height: 90px;
+        justify-content: center;
     }
     
     .logo_principal {
-        height: 110px;
-        width: 75%;
+        height: 90px;
+        width: 60%;
     }
     
     .mainMenu_container { /*Opciones menú principal*/
@@ -147,10 +147,16 @@
     .userMenu_container {
         display: none;
     }
+
+    .userMenu_icon_container{ /*Icono usuario*/
+        justify-content: flex-start;
+        height: 70px;
+        margin-top: 10px;
+    }
     
     .menu_items {
-        line-height: 110px;
-        font-size: 1.3rem;
+        line-height: 90px;
+        font-size: 1.1rem;
         padding: 0 1rem;
     }
 
@@ -167,7 +173,7 @@
     .nav_link_active {
         background-color: inherit;
         color: var(--second-a-text-color);
-        font-weight: 400;
+        font-weight: 500;
     }
 
 }
