Agregando funcionalidad para modificar datos de usuario

--- a/public/reset.css
+++ b/public/reset.css
@@ -65,7 +65,7 @@ html {
 
     --main-text-color: #727272;
     --second-text-color: #FFFFFF;
-    --third-text-color: #A6A6A6;
+    --third-text-color: rgb(166, 166, 166);
 
     --main-a-text-color: #023859;
     --second-a-text-color: rgb(21, 147, 185);
