--- a/public/reset.css
+++ b/public/reset.css
@@ -74,6 +74,9 @@ html {
 
     --border-color-form: #A6A6A6;
 
+    --fondo_gris: #E5E5E5;
+    --bg_footer: #EAF2FD;
+
     --size-spinner: 1;
 
   }
