--- a/src/css/usuarios/Compras.module.css
+++ b/src/css/usuarios/Compras.module.css
@@ -1,10 +1,14 @@
 .contenedorPrincipal {
-    /* gap: 1rem; */
     padding: 0 .5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .tituloCompras{
+    width: 100%;
     padding: 1rem 0 .4rem 0;
+    margin-bottom: .3rem;
     color: var(--second-a-text-color);
     font-size: 1.5rem;
     font-weight: 500;
@@ -15,12 +19,13 @@
     padding: 15px;
     font-size: 1.3rem;
     border-radius: 20px;
+    position: relative;
 }
 
 .imgCompras{
     width: 50px;
-    left: 35px;
-    top: 190px;
+    left: 10px;
+    top: 30px;
     position: absolute;
 }
 
@@ -40,16 +45,17 @@
     font-weight: initial;
 }
 
-.buttonsComprasContainer{
-    /* border: 1px solid blueviolet; */
+.buttonsComprasContainer {
+    width: 100%;
     margin: 2.5rem 0;
     display: flex;
     justify-content: space-around;
+    height: 45px;
 }
 
+.historialCompras,
 .comprarPedido,
-.solicitarLlenado,
-.historialCompras {
+.historialGratis {
   width: auto;
   color: var(--second-text-color);
   padding: 0.6rem .7rem;
@@ -63,11 +69,11 @@
   font-weight: 500;
 }
 
-.comprarPedido{
+.historialCompras{
     background-color: var(--main-a-text-color);
 }
 
-.historialCompras{
+.historialGratis{
     background-color: var(--main-bg-color);
     border: 2px solid var(--button-main-bg);
     color: var(--main-text-color);
@@ -82,15 +88,15 @@
 
 .leyendaCompras{
     text-align: center;
-    /* padding: 2rem; */
-    font-size: 2rem;
+    font-size: 1.5rem;
+    line-height: 30px;
     color: var(--second-a-text-color);
 }
 
 .pieCompras{
-    /* text-align: center; */
-    font-size: .8rem;
-    margin: 4rem 0 2rem 0;
+    font-size: .7rem;
+    margin: 4rem 0 .8rem 0;
+    text-align: center;
 }
 
 .seccionSpinner {
@@ -112,8 +118,9 @@
     }
     
     .tituloCompras{
-        font-size: 1.6rem;
+        font-size: 1.7rem;
         font-weight: 600;
+        width: 600px;
     }
     
     .infoComprasContainer{
@@ -122,16 +129,17 @@
         font-size: 1.5rem;
         border-radius: 25px;
         width: 600px;
+        line-height: 35px;
     }
     
     .imgCompras{
-        width: 80px;            
-        left: 100px;
-        top: 190px;
+        width: 80px;
+        left: 30px;
     }
     
     .pFraseCompras{
         margin-left: 7rem;
+        font-size: 1.7rem;
     }
     
     .spanCompras{
@@ -145,19 +153,16 @@
     .buttonsComprasContainer{
         margin: 2rem 0;
         width: 600px;
+        height: 55px;
     }
     
     .comprarPedido,
-    .solicitarLlenado,
+    .historialGratis,
     .historialCompras {
       padding: 1rem 1.2rem;
       font-size: 1.2rem;
       border-radius: 10px;
       font-weight: 600;
-    }
-    
-    .historialCompras{
-        border: 2.5px solid var(--button-main-bg);
     }
     
     .comprarPedido:hover,
@@ -169,8 +174,9 @@
     .leyendaCompras{
         padding: 1rem;
         margin-bottom: 2rem;
-        font-size: 2.8rem;
+        font-size: 2rem;
         width: 600px;
+        line-height: 45px;
     }
     
     .pieCompras{
@@ -194,6 +200,7 @@
     .tituloCompras{
         font-size: 1.8rem;
         font-weight: 600;
+        width: 650px;
     }
     
     .infoComprasContainer{
@@ -205,9 +212,9 @@
     }
     
     .imgCompras{
-        width: 100px;            
-        left: 355px;
-        top: 215px;
+        width: 100px;
+        left: 30px;
+        top: 20px;
     }
     
     .pFraseCompras{
@@ -225,19 +232,16 @@
     .buttonsComprasContainer{
         margin: 2rem 0;
         width: 650px;
+        height: 60px;
     }
     
+    .historialCompras,
     .comprarPedido,
-    .solicitarLlenado,
-    .historialCompras {
+    .historialGratis {
       padding: 1rem 1.2rem;
       font-size: 1.2rem;
       border-radius: 10px;
       font-weight: 600;
-    }
-    
-    .historialCompras{
-        border: 3px solid var(--button-main-bg);
     }
     
     .comprarPedido:hover,
@@ -249,8 +253,9 @@
     .leyendaCompras{
         padding: 1rem;
         margin-bottom: 2rem;
-        font-size: 3rem;
-        width: 650px;
+        font-size: 2.2rem;
+        width: 650px;        
+        line-height: 55px;
     }
     
     .pieCompras{
