--- a/src/css/usuarios/Reportes.module.css
+++ b/src/css/usuarios/Reportes.module.css
@@ -1,26 +1,23 @@
 .contenedorOutlet {
-    /* border: 1px solid fuchsia; */
     grid-area: items;
-    position: relative;
-    /* padding-top: 7px; */
     height: 100%;
 }
 
 .contenedorReporte {
     display: grid;
     grid-template: 
-    "cuerpoReporte" 1fr
-    "botonesReporte" auto;
-    min-height: 100%;
+    "cuerpoReporte" 1fr;
+    min-height: 400px;
 }
 
 .contenedorIntervaloFecha {
+    /* border: 1px solid yellowgreen; */
     grid-area: fechasReporte;
     margin-top: .2rem;
 }
 
 .contenedorFechas {
-    display: flex;
+    display: flex;  
 }
 
 .contenedorLeyenda {
@@ -32,7 +29,6 @@
 
 .contenedorCuerpoReporte {
     grid-area: cuerpoReporte;
-    /* border: 1px solid blue; */
     padding: .3rem .5rem;
     max-height: 400px;
     overflow: hidden;
@@ -41,11 +37,6 @@
 
 .contenedorCuerpoReporte > ul :not(:last-child) {
     margin-bottom: .8rem;
-}
-
-.contenedorBotonesReporte {
-    grid-area: botonesReporte;
-    border: 1px solid red;
 }
 
 .contenedorFecha {
@@ -67,4 +58,76 @@
     border: 1px solid var(--third-text-color);
     font-size: .9rem;
     text-align: center;
+}
+
+.contenedorBotonesReporte {
+    grid-area: botonesReporte;
+    display: flex;
+    gap: .8rem;
+    padding: .2rem .8rem;
+    box-shadow: 1px 1px 1px 1px rgb(166 166 166 / 60%);
+}
+
+.icons_container{
+    width: 30px;
+    cursor: pointer;
+}
+
+.icons_container:first-child{
+    color: rgb(53, 122, 56, .8);
+}
+
+.icons_container:last-child{
+    display: none;
+    color: #ab003c;
+}
+
+.icons_container:first-child:hover {
+    color: rgb(53, 122, 56, 1);
+    transition: .3s;    
+}
+
+/* Tablets y Laptops*/
+@media screen and (min-width: 600px) {
+    
+    .contenedorIntervaloFecha {
+        margin-top: .5rem;
+    }
+    
+    .contenedorFechas {
+        gap: 1.2rem;
+    }
+    
+    .contenedorFecha:not(:last-child) {
+        margin-right: 0;
+    }
+    
+    .contenedorFecha > p {
+        line-height: 33px;
+        font-weight: 500;
+    }
+    
+    .contenedorFecha > input { 
+        font-size: 1rem;
+        width: 160px;
+    }
+    
+    .contenedorLeyenda {
+        padding-top: .5rem;
+        text-align: left;
+        color: var(--main-text-color);
+        font-size: 1.1rem;
+        font-variant: small-caps;
+        font-style: italic;
+    }
+    .contenedorCuerpoReporte {        
+        max-height: 270px;        
+        box-shadow: 1px 1px 1px 1px rgb(166 166 166 / 60%);
+    }
+
+    .contenedorCuerpoReporte > ul {     
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: .7rem;
+    }
 }
