Agregados en Avatar del Navbar y Mapa de navegacion

--- a/src/css/Formularios.module.css
+++ b/src/css/Formularios.module.css
@@ -81,6 +81,10 @@
     cursor: pointer;
 }
 
+.reCaptcha__container{
+    height: 80px;
+}
+
 /* Laptops*/
 @media screen and (min-width: 1024px) {    
     .formularioContainer {
