Agregando Landing Page para version 1024px

--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -7,7 +7,7 @@
     grid-template: 
     "iconMainMenu logo iconUserMenu" 80px / 20% 60% 20%;
     padding: 0 1rem;
-    box-shadow: 0 2px 0 rgb(21 147 185 / 60%);
+    /* box-shadow: 0 2px 0 rgb(21 147 185 / 60%); */
     z-index: 9;
 }
 
@@ -123,12 +123,12 @@
     }
 
     .logo_container { /*Nombre y logo*/        
-        height: 90px;
+        height: 80px;
         justify-content: center;
     }
     
     .logo_principal {
-        height: 90px;
+        height: 80px;
         width: 60%;
     }
     
@@ -138,6 +138,7 @@
         left: 0;
         border: none;
         overflow-y: hidden; 
+        text-decoration: none;
     }
 
     .mainMenu_container > ul {
