Modificacion a la seccion Nosotros: Agregando Valores

--- a/public/reset.css
+++ b/public/reset.css
@@ -68,7 +68,7 @@ html {
     --third-text-color: rgb(166, 166, 166);
 
     --main-a-text-color: #023859;
-    --second-a-text-color: rgb(21, 147, 185);
+    --second-a-text-color: #1593b9;
 
     --button-main-bg: #77E2EA;
 
